test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/cast_incomplete_struct.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  struct
  identifier(s)
  ;
  extern
  struct
  identifier(s)
  identifier(v)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  (
  void
  )
  identifier(v)
  ;
  return
  const int(0)
  ;
  }
